Fix alignment and background color of remove button

--- a/src/assets/less/pages/globalping/network.less
+++ b/src/assets/less/pages/globalping/network.less
@@ -285,7 +285,10 @@
 
 						&_remove {
 							border: none;
+							background: transparent;
 							display: flex;
+							justify-content: center;
+							align-items: center;
 							padding: 0;
 							width: 18px;
 							height: 18px;
